# lesovod

./: .gitignore  Dockerfile  LICENSE  README.md  default.conf  docker-compose.yaml  requirements.txt  setup.cfg
.github/workflows/: main.yml
lesovod/: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
lesovod/core/context_processors/: year.py
lesovod/employers/: admin.py  models.py
lesovod/employers/migrations/: 0001_initial.py  0002_auto_20220517_1844.py
lesovod/lesovod/: asgi.py  settings.py  urls.py  views.py  wsgi.py
lesovod/media/images/: i_3.jfif  i_DVSHYfy.jfif
lesovod/media/media/: i_1.jfif
lesovod/posts/: admin.py  forms.py  models.py  views.py
lesovod/posts/migrations/: 0001_initial.py  0002_post_image.py  0003_alter_post_image.py  0004_post_title.py  0005_alter_post_title.py  0006_alter_post_image.py
lesovod/static/css/: style.css
lesovod/templates/: about.html  base.html  employers.html  employers1.html  index.html  new_post.html  paginator.html  posts.html
lesovod/templates/includes/: footer.html  header.html
lesovod/templates/users/: login.html
lesovod/users/: tests.py  urls.py
