[tool.poetry]
name = "lesovod-site"
version = "0.1.0"
description = "Site for forest company OOO 'lesovod'"
authors = ["romanlosev <losik19-94@yandex.ru>"]
readme = "README.md"
packages = [{include = "lesovod"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
sorl-thumbnail = "^12.9.0"
pillow = "^9.3.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
